[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domainhunter"
version = "1.0.0"
description = "Professional domain OSINT & reconnaissance framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohammad Pooshesh", email = "mohammad.pooshesh@gmail.com" }]
keywords = ["osint", "reconnaissance", "security", "domain", "dns", "recon"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "dnspython>=2.6.0",
    "python-whois>=0.9.0",
    "cryptography>=42.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "playwright>=1.43.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "ipwhois>=1.2.0",
    "tldextract>=5.1.0",
    "mmh3>=4.1.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-requests",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/mohammadpooshesh/DomainHunter"
Repository = "https://github.com/mohammadpooshesh/DomainHunter"
Issues = "https://github.com/mohammadpooshesh/DomainHunter/issues"

[project.scripts]
domainhunter = "main:app"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["core*", "modules*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Default rule set (pyflakes + a subset of pycodestyle) keeps CI strict but
# predictable. E501 (line length) is intentionally left off.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true
